[gd_scene load_steps=4 format=3 uid="uid://cpsu8wxbqyj34"]

[ext_resource type="Texture2D" uid="uid://b2kqablq42vcj" path="res://Graphics/Menus/white_circle_small.png" id="1_0h6uo"]
[ext_resource type="Texture2D" uid="uid://dmq71f8e1aqr7" path="res://icon.svg" id="1_6pjmx"]
[ext_resource type="Script" path="res://Scenes/Menus/actor_attack_menu.gd" id="1_gkhpm"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 299.0
offset_bottom = 150.0
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("1_gkhpm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 25

[node name="LeftMenu" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AttackButton" type="Button" parent="HBoxContainer/LeftMenu"]
layout_mode = 2
text = "Attack"

[node name="SkillsButton" type="Button" parent="HBoxContainer/LeftMenu"]
layout_mode = 2
text = "Skills"

[node name="ItemsButton" type="Button" parent="HBoxContainer/LeftMenu"]
layout_mode = 2
text = "Items"

[node name="RightMenu" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChangeAndTime" type="HBoxContainer" parent="HBoxContainer/RightMenu"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="ChangeStyle" type="Button" parent="HBoxContainer/RightMenu/ChangeAndTime"]
layout_mode = 2
size_flags_horizontal = 0
text = "Change"

[node name="WaitTimeBar" type="TextureProgressBar" parent="HBoxContainer/RightMenu/ChangeAndTime"]
layout_mode = 2
value = 50.0
fill_mode = 5
texture_under = ExtResource("1_0h6uo")
texture_progress = ExtResource("1_0h6uo")
tint_under = Color(0.244027, 0.231308, 0.26105, 1)
tint_progress = Color(0, 0.783616, 0, 1)

[node name="HealthBar" type="ProgressBar" parent="HBoxContainer/RightMenu"]
layout_mode = 2

[node name="RangeWeaponStats" type="HBoxContainer" parent="HBoxContainer/RightMenu"]
layout_mode = 2

[node name="Ammo" type="Label" parent="HBoxContainer/RightMenu/RangeWeaponStats"]
layout_mode = 2
text = "6/6"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/RightMenu/RangeWeaponStats"]
layout_mode = 2
texture = ExtResource("1_6pjmx")
expand_mode = 3
